<resources>
    <string name="app_name">MobilAlk_vizora</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="login">Belépés</string>
    <string name="login_title">Vízóra bejelentés</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_title_home">Főoldal</string>
    <string name="nav_title_new">Új</string>
    <string name="nav_title_history">Korábbi</string>
    <string name="recent_uploads">Legutóbbi bejelentések</string>
    <string name="register">Regisztráció</string>
    <string name="previous_uploads_title">Korábbi bejelentések</string>
    <string name="profile">Profil</string>
    <string name="logout">Kilépés</string>
    <string name="new_upload_title">Új bejelentés</string>
    <string name="water_amount">Víz mennyiség</string>
    <string name="name">Név</string>
    <string name="birth_date">Születési dátum</string>
    <string name="password_rep">Jelszó újra</string>
    <string name="error_name_length">A névnek legalább 3 karakternek kell lennie</string>
    <string name="error_required_field">Kötelező mező</string>
    <string name="error_email_format">Hibás email formátum</string>
    <string name="error_username_length">A névnek legalább 4 karakter hosszúnak lennie</string>
    <string name="error_passw_mismatch">A két jelszó nem egyezik</string>
    <string name="error_register_failed">Regisztráció sikertelen</string>
    <string name="register_success_toast">Regisztráció sikeres</string>
    <string name="userIdLabel">Azonosító</string>
    <string name="lastLogin">Utolsó belépés</string>
    <string name="change_password"><u>Jelszó váltása</u>></string>
    <string name="save_name_change">Névváltozás mentése</string>
    <string name="drop_logo">Water drop logo</string>
    <string name="forgotten_pass">Elfelejtett jelszó</string>
    <string name="send">Küldés</string>
    <string name="cancel">mégse</string>
    <string name="email_send_success">Sikeres email küldés</string>
    <string name="email_send_failed">Sikertelen email küldés</string>
    <string name="password_reset">Jelszó visszaállítás</string>
    <string name="unknown_error">Ismeretlen hiba</string>
    <string name="missing_fingerprint_error">Hiányzó ujjlenyomat</string>
    <string name="auth_error">"Azonosítási hiba"</string>
    <string name="two_step_verify">Kétlépcsős azonosítás</string>
    <string name="error_invalid_input">Hibás beviteli mező(k)</string>
    <string name="auth_failed">Sikertelen azonosítás</string>
    <string name="bio_auth_request_data">Kérjük adjon meg biometrikus azonosítási adatokat</string>
    <string name="continue_str">Tovább</string>
    <string name="take_photo">fényképezés</string>
    <string name="upload_success">Feltöltés sikeres</string>
    <string name="upload_failed">Feltöltés sikertelen</string>
    <string name="photo">Kép</string>
    <string name="listing_failure">Sikertelen listázás</string>
    <string name="date">Dátum</string>
    <string name="delete_profile">Profil törlése</string>
    <string name="delete_warning_positive">Törlés</string>
    <string name="delete_prof_warning">Biztosan törli a profilját?</string>
    <string name="delete_success">Sikeres törlés</string>
    <string name="delete_failed">Sikertelen törlés</string>
    <string name="approved">Jóváhagyva</string>
    <string name="waiting_for_approval">Jóváhagyásra vár</string>
    <string name="statement_approve_success">bejelentések jóváhagyva</string>
    <string name="statement_approve_failed">bejelentések jóváhagyása sikertelen</string>
    <string name="status">Állapot</string>
</resources>