<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mobilalk_vizora.fragments.home.HomeFragment"
        android:label="@string/nav_title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.example.mobilalk_vizora.fragments.upload.UploadFragment"
        android:label="@string/nav_title_new"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.mobilalk_vizora.fragments.history.HistoryFragment"
        android:label="@string/nav_title_history"
        tools:layout="@layout/fragment_home" />

</navigation>